<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <Button
        android:id="@+id/button_grupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/actualizar_grupo"
        android:layout_weight="0.10" />

    <Button
        android:id="@+id/button_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/promedio"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/max"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/min"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/sum"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/count"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/ingresar"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_actualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/actualizar"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_consultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/consultar"
        android:layout_weight="0.06" />

    <Button
        android:id="@+id/button_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarActividad"
        android:text="@string/eliminar"
        android:layout_weight="0.06" />


</LinearLayout>