<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarActivity"

    android:orientation="vertical"
    android:id="@+id/LinearLayout4">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tableRow1">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/textView2"
                android:text="@string/idautor"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/editText_autor"
                android:ems="10">
                <requestFocus/>
            </EditText>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tableRow2">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/TextView02"
                android:text="@string/cod_libro"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/editText_codigo"
                android:ems="10"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tableRow4">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/cantidad"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/editText_cantidad"
                android:ems="10"/>
        </TableRow>

        <Button
            android:onClick="actualizar"
            android:text="@string/servicio_PHPlocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableLayout>

</LinearLayout>