<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EliminarActivity"
    android:orientation="vertical"
    android:id="@+id/LinearLayout5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView03"
            android:text="@string/idautor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_autor"
            android:ems="10">
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/TextView02"
            android:text="@string/cod_libro"/>

        <EditText
            android:id="@+id/editText_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10">
            <requestFocus />
        </EditText>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:text="@string/servicio_PHPlocal"
            android:onClick="eliminar"
            />
    </LinearLayout>


</LinearLayout>